use youtube video instead
Former-commit-id: 2e992e477d17d75b337a7c588dbc325e89cde04a

--- a/src/site/site.css
+++ b/src/site/site.css
@@ -62,8 +62,12 @@ a:hover {
 	font-size: 150%;
 	font-weight: bold;
 }
-#message {
+#video {
 	text-align: center;
+}
+#flash {
+	width: 480px;
+	height: 295px;
 }
 #subtext {
 	text-align: center;
