--- a/src/site/site.css
+++ b/src/site/site.css
@@ -26,18 +26,53 @@ a:hover {
 #header, #body {
 	margin: 0px 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
-	width: 100%;
 }
 #header {
+	width: 100%;
 	height: 64px;
 	border-bottom: 1px solid #222222;
 	padding-bottom: 4px;
+}
+#body {
+	clear: both;
+	width: 95%;
+}
+#logo {
+	text-align: left;
+	float: left;
+	clear: left;
+}
+#tags, #right {
+	text-align: right;
+	float: right;
+	clear: right;
+}
+#logo img, #tags img, #right img, #right form {
+	padding: 2px 2px 2px 2px;
+	display: inline;
+}
+#right {
+	vertical-align: middle;
+}
+#blurb {
+	text-align: right;
+	padding: 4px 8px 4px 4px;
+	font-weight: bold;
+	font-size: 90%;
+}
+#version {
+	padding: 2px 2px 2px 2px;
+	text-align: center;
+	vertical-align: middle;
+	font-size: 90%;
+	border-bottom: 1px solid #222;
+	background: #171717;
 }
 #navbar {
 	text-align: center;
 	font-size: 90%;
 	border-bottom: 1px solid #222222;
-	padding: 4px 0px 4px 0px;
+	padding: 4px 4px 4px 4px;
 }
 ul.nav-list {
 	display: inline;
@@ -54,37 +89,12 @@ ul.nav-list li a:hover {
 	background-image: url('splat.png');
 	background-repeat: no-repeat;
 }
-#logo {
-	text-align: left;
-	float: left;
-	clear: left;
-}
-#tags {
-	text-align: right;
-	float: right;
-	clear: right;
-}
-#logo img, #tags img {
-	padding: 2px 2px 2px 2px;
-	display: inline;
-}
-#blurb {
-	text-align: right;
-	padding: 4px 8px 4px 4px;
-	font-weight: bold;
-	font-size: 90%;
-}
-#version {
-	padding: 2px 2px 2px 2px;
+#notice {
 	text-align: center;
-	vertical-align: middle;
 	font-size: 90%;
-	border-bottom: 1px solid #222;
-	background: #171717;
-}
-#portal {
-	clear: both;
-	width: 90%;
+	font-weight: bold;
+	border-bottom: 1px solid #222222;
+	padding: 4px 4px 4px 4px;
 }
 #supertext {
 	font-size: 140%;
@@ -93,10 +103,6 @@ ul.nav-list li a:hover {
 #flash {
 	width: 480px;
 	height: 360px;
-}
-#noticetext {
-	font-size: 90%;
-	font-weight: bold;
 }
 #subtext {
 	font-size: 80%;
