--- a/src/site/site.css
+++ b/src/site/site.css
@@ -1,6 +1,6 @@
 body {
 	font-family: sans-serif;
-	font-size: 100%;
+	font-size: small;
 	background-color: #000000;
 	color: #FFFFFF;
 	margin: 0px 0px 0px 0px;
@@ -28,6 +28,7 @@ a:hover {
 	padding: 0px 0px 0px 0px;
 }
 #header {
+	font-size: medium;
 	width: 100%;
 	height: 64px;
 	border-bottom: 1px solid #222222;
