--- a/src/site/bits/style.css
+++ b/src/site/bits/style.css
@@ -181,11 +181,16 @@ body {
 	color: #FF0000;
 	text-decoration: underline;
 }
+#sflogo {
+	margin: 0px 32px;
+	float: right;
+	padding: 0px;
+}
 #list {
 	font-size: 13px;
 	color: #FFFFFF;
 	margin: 0px;
-	padding: 15px 20px 0px 0px;
+	padding: 20px 20px 0px 0px;
 	float: right;
 	width: 140px;
 }
@@ -216,11 +221,6 @@ body {
 #list a:hover {
 	color: #CCCCCC;
 	text-decoration: none;
-}
-#listlogo {
-	margin: 0px;
-	float: left;
-	padding: 15px 0px 0px 0px;
 }
 #listdonate {
 	margin: 0px;
