--- a/src/site/bits/style.css
+++ b/src/site/bits/style.css
@@ -2,7 +2,7 @@
 body {
 	font-family: sans-serif;
 	font-size: 11px;
-	background: #0e0e0e url(/bits/bg_01.jpg) no-repeat scroll center top;
+	background: #0e0e0e no-repeat scroll center top;
 	margin: 0px;
 	padding: 0px;
 }
