screenshot block compatible with cubeengine.com website
Former-commit-id: 59ed0114af6405b055e0e1658c89697877fd3cf6

--- a/src/site/bits/style.css
+++ b/src/site/bits/style.css
@@ -270,6 +270,20 @@ body {
 	color: #FF0000;
 	text-decoration: underline;
 }
+#screen {
+	font-size: 11px;
+	color: #FFFFFF;
+	background-color: #000000;
+	margin: 0px;
+	padding: 0px;
+	height: 140px;
+	width: 738px;
+	text-align: center;
+	float: left;
+}
+#screen img {
+	border: none;
+}
 #subtext {
 	font-size: 11px;
 	color: #FFFFFF;
